try to fix mistakes on mobile w overflow 2

--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ color:white;
 font-size: calc(((1vh+1vw)/2)*10);
 
 }
-body, html {
-overflow-x: hidden;
+body {
+height: 100%;
+overflow: hidden;
 }
 h1{
     margin-left:10%;
